# genai-prod

./: .gitignore  Dockerfile  README.md  alb-ingres.yaml  app.py  app_streamlit.py  app_ui.py  buildspec.yaml  deployment.yaml  pyproject.toml
.github/workflows/: deploy.yml
infrastructure/: alb.tf  api_gateway.tf  codebuild.tf  eks.tf  iam.tf  main.tf  provider.tf  secrets_manager.tf  security.tf  vpc.tf
templates/: form.html
terraform/: api_gateway.tf  ecr.tf  ecs.tf  ecs_service.tf  ecs_task.tf  iam.tf  network.tf  output.tf  provider.tf  state.json
