[tool.poetry]
name = "genai-prod"
version = "0.1.0"
description = ""
authors = ["Daniel Aguilera"]
readme = "README.md"
package-mode = false  # Disable package mode

[tool.poetry.dependencies]
python = ">=3.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

